# covesa-ifex-offboard-services

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  generate_proto.sh  install_deps.sh  rebuild.sh
dashboard/: Dockerfile  fleet_api.py  fleet_dashboard.html  requirements.txt  run_dashboard.sh
dashboard/proto_gen/: cloud_backend_transport_service_pb2.py  cloud_backend_transport_service_pb2_grpc.py  cloud_discovery_service_pb2.py  cloud_discovery_service_pb2_grpc.py  cloud_dispatcher_service_pb2.py  cloud_dispatcher_service_pb2_grpc.py  cloud_scheduler_service_pb2.py  cloud_scheduler_service_pb2_grpc.py  dispatcher_rpc_envelope_pb2.py  dispatcher_rpc_envelope_pb2_grpc.py  ifex_scheduler_service_pb2.py  ifex_scheduler_service_pb2_grpc.py  scheduler_command_envelope_pb2.py  scheduler_command_envelope_pb2_grpc.py  scheduler_sync_envelope_pb2.py  scheduler_sync_envelope_pb2_grpc.py
deploy/: Dockerfile.cloud-services  docker-compose.yml  generate-test-data.sh  kafka-dump-enrichment.sh  kafka-topics.sh  mosquitto.conf  mqtt-tools.sh  query-db.sh  setup.sh  start-infra.sh  start-simulation.sh  stop-infra.sh  stop-simulation.sh  teardown.sh  test-bridge-startup.sh  test-discovery-sync.sh  test-offline-vehicle.sh  test-scheduler-api.sh  test-scheduler-commands.sh  test-scheduler-e2e.sh  test-vehicle-status.sh
deploy/init-db/: 01-schema.sql  02-seed-data.sql
docker/: docker-compose.yml  mosquitto.conf
docs/: UI_ARCHITECTURE.md  fleet-dashboard-spec.md  offboard-platform-refactor-plan.md  offboard-system-spec.md
libs/envelope_codec/include/: discovery_codec.hpp  discovery_offboard_codec.hpp  rpc_codec.hpp  rpc_offboard_codec.hpp  scheduler_codec.hpp  scheduler_offboard_codec.hpp
libs/envelope_codec/src/: discovery_codec.cpp  discovery_offboard_codec.cpp  rpc_codec.cpp  rpc_offboard_codec.cpp  scheduler_codec.cpp  scheduler_offboard_codec.cpp
libs/grpc_service_base/include/: grpc_service_base.hpp
libs/grpc_service_base/src/: grpc_service_base.cpp
libs/kafka_client/include/: kafka_consumer.hpp  kafka_producer.hpp
libs/kafka_client/src/: kafka_consumer.cpp  kafka_producer.cpp
libs/mqtt_kafka_router/include/: enrichment_consumer.hpp  mqtt_kafka_router.hpp  vehicle_context.hpp
libs/mqtt_kafka_router/src/: enrichment_consumer.cpp  mqtt_kafka_router.cpp  vehicle_context.cpp
libs/offboard-platform/: CMakeLists.txt  cloud-backend-transport-service.proto  cloud-discovery-service.proto  cloud-dispatcher-service.proto  cloud-scheduler-service.proto
libs/offboard-platform/ifex/: cloud-backend-transport-service.yml  cloud-discovery-service.yml  cloud-dispatcher-service.yml  cloud-scheduler-service.yml
libs/offboard-platform/include/: cloud_backend_transport_server.hpp  kafka_mqtt_transport.hpp  offboard_transport.hpp
libs/offboard-platform/src/: backend_transport_server_main.cpp  cloud_backend_transport_server.cpp  kafka_mqtt_transport.cpp
libs/postgres_client/include/: postgres_client.hpp
libs/postgres_client/src/: postgres_client.cpp
proto/: cloud-discovery-service.proto  cloud-dispatcher-service.proto  cloud-scheduler-service.proto  discovery-offboard.proto  discovery-sync-envelope.proto  dispatcher-rpc-envelope.proto  ifex-scheduler-service.proto  rpc-offboard.proto  scheduler-command-envelope.proto  scheduler-offboard.proto  scheduler-sync-envelope.proto  scheduler-sync-v2.proto  vehicle-enrichment.proto
scripts/: start-dev.sh  stop-dev.sh
services/api/discovery/: discovery_query.cpp  discovery_query.hpp  discovery_service_impl.cpp  discovery_service_impl.hpp  main.cpp
services/api/dispatcher/: dispatcher_service_impl.cpp  dispatcher_service_impl.hpp  main.cpp  rpc_request_manager.cpp  rpc_request_manager.hpp
services/api/scheduler/: calendar_sync_service.hpp  job_command_producer.cpp  job_command_producer.hpp  job_sync_producer.cpp  job_sync_producer.hpp  main.cpp  scheduler_query.cpp  scheduler_query.hpp  scheduler_service_impl.cpp  scheduler_service_impl.hpp
services/cloud_discovery/: discovery_query.hpp  discovery_service_impl.cpp  discovery_service_impl.hpp
services/cloud_dispatcher/: dispatcher_service_impl.hpp  main.cpp  request_producer.cpp  request_producer.hpp  response_consumer.cpp  response_consumer.hpp  rpc_request_manager.cpp
services/cloud_scheduler/: scheduler_query.cpp  scheduler_service_impl.hpp
services/discovery_mirror/: discovery_store.hpp  main.cpp
services/enrichment_exporter/: main.cpp
services/ingestion/discovery_mirror/: discovery_store.cpp  discovery_store.hpp  main.cpp
services/ingestion/mqtt_kafka_bridge/: main.cpp
services/ingestion/scheduler_mirror/: main.cpp  scheduler_store.cpp  scheduler_store.hpp
services/mqtt_kafka_bridge/: main.cpp
services/rpc_gateway/: main.cpp  rpc_store.cpp  rpc_store.hpp
services/scheduler_mirror/: scheduler_store.cpp
sql/: schema.sql
sql/migrations/: 002_add_jobs_sync_tracking.sql  002_add_ui_tables.sql  003_add_job_rejection_reason.sql  004_add_quiescence_tracking.sql  005_add_execution_id.sql
tests/: CMakeLists.txt
tests/e2e/: discovery_e2e_test.cpp  dispatcher_e2e_test.cpp  docker-compose.e2e.yml  e2e_test_fixture.cpp  e2e_test_fixture.hpp  mosquitto-e2e.conf  scheduler_e2e_test.cpp  status_e2e_test.cpp
tests/integration/: transport_server_test.cpp
tests/unit/: scheduler_command_test.cpp
